Remove ellipsis clipping of resource titles on browse views, set columns to take up 50% width. Fix #74.

--- a/application/asset/css/style.css
+++ b/application/asset/css/style.css
@@ -962,7 +962,6 @@ th {
   /* @end */
   /* @group ----- Browse views ----- */
   .browse .resource-name {
-    display: block;
     float: left;
     max-width: calc(100% - 5.5em);
     overflow: hidden;
@@ -973,6 +972,11 @@ th {
   .browse .batch-edit.button {
     float: left;
     margin-right: .25em;
+  }
+
+  .browse td:first-child,
+  .browse th:first-child {
+    width: 50%;
   }
 
   .actions {
@@ -1023,18 +1027,6 @@ th {
     position: absolute;
     top: 0;
     left: 0;
-  }
-
-  .resource-name {
-    max-width: 80%;
-  }
-
-  .resource-name a {
-    width: 100%;
-    display: block;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
   }
 
   th a.sortable,
